k8s-examples/network-policy/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: np-test-a
  labels:
    team: ateam
---
apiVersion: v1
kind: Namespace
metadata:
  name: np-test-b
  labels:
    team: bteam
