k8s-examples/network-policy/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: np-test-b
  labels:
    app: np-test-client
spec:
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh', '-c', 'while true; do curl -m 2 10.244.32.165; sleep 10; done']
