k8s-examples/network-policy/np-test-b-default-deny-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-test-b-default-deny-egress
  namespace: np-test-b
spec:
  podSelector: {}
  policyTypes:
  - Egress
